# rusty-refinery

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  refinery.toml
crates/crk/: Cargo.toml
crates/crk-plan/: Cargo.toml
crates/crk-plan/src/: agent.rs  create.rs  lib.rs
crates/crk/src/: main.rs
crates/crk/src/commands/: create_submodule.rs  daemon.rs  generate_config.rs  hook.rs  mod.rs  proxy.rs  scan.rs  stdio.rs  tools.rs
crates/librefinery/: Cargo.toml
crates/librefinery/src/: config.rs  git_ops.rs  lib.rs  proxy.rs
src/: bead.rs  config.rs  events.rs  gen_config.rs  git_ops.rs  hooks.rs  main.rs  proxy.rs  reaper.rs  tools.rs
src/commands/: create_submodule.rs  daemon.rs  generate_config.rs  hook.rs  mod.rs  plan.rs  proxy.rs  scan.rs  stdio.rs  tools.rs
