[package]
name = "rusty-refinery"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusty-refinery"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "1.0", features = ["tokio-comp"] }
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
schemars = { version = "1.0", features = ["chrono04"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
